# PowerPoint

SlideEditor/: CMakeCache.txt  CMakeLists.txt  Command.hpp  CommandFactory.hpp  Controller.hpp  Makefile  Parser.cpp  Parser.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  SyntaxAnalysis.cpp  SyntaxAnalysis.hpp  Tokenizer.cpp  Tokenizer.hpp  a.out  cmake_install.cmake  main.cpp
SlideEditor/Application/: Application.cpp  Application.hpp
SlideEditor/CLI/: Command.cpp  Command.hpp  CommandFactory.hpp  Controller.cpp  Controller.hpp  Parser.cpp  Parser.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  Tokenizer.cpp  Tokenizer.hpp
SlideEditor/CLI/Command/: AddSlide.cpp  AddSlide.hpp  CommandFactory.cpp  CommandFactory.hpp  Exit.cpp  Exit.hpp  Help.cpp  Help.hpp  ICommand.cpp  ICommand.hpp  LoadCommand.cpp  LoadCommand.hpp  RemoveSlide.cpp  RemoveSlide.hpp  SaveCommand.cpp  SaveCommand.hpp  Undo.hpp  UndoRedo.cpp  UndoRedo.hpp  View.cpp  View.hpp
SlideEditor/Document/: DocumentSerializer.cpp  DocumentSerializer.hpp  Item.cpp  Item.hpp  Slide.cpp  Slide.hpp  SlideCollection.cpp  SlideCollection.hpp
SlideEditor/Editor/: AddSlideAction.cpp  AddSlideAction.hpp  Editor.cpp  Editor.hpp  IAction.hpp  RemoveSlideAction.cpp  RemoveSlideAction.hpp
SlideEditor/Visualization/: IVisualization.hpp  Visualization.cpp  Visualization.hpp
SlideEditor/bulde/: CMakeCache.txt  Makefile  SlideEditor  cmake_install.cmake  newfile
